# Encryptor-App

./: .gitignore  README.md
EncryptorApp/: CMakeLists.txt  Main.qml  customButton.qml  encryptor.cpp  encryptor.h  fileBrowser.qml  filemanager.cpp  filemanager.h  main.cpp  passField.qml
